crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__assignment_missing_value.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/assignment_missing_value.py
---
## AST

 ```
Module(
    ModModule {
        range: 0..10,
        body: [
            Assign(
                StmtAssign {
                    range: 0..3,
                    targets: [
                        Name(
                            ExprName {
                                range: 0..1,
                                id: "a",
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            range: 3..3,
                            id: "",
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 5..10,
                    value: BinOp(
                        ExprBinOp {
                            range: 5..10,
                            left: Name(
                                ExprName {
                                    range: 5..6,
                                    id: "a",
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                ExprName {
                                    range: 9..10,
                                    id: "b",
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | a =
  |    ^ Syntax Error: Expression expected.
2 | 
3 | a + b
  |



